# eye-of-emergency

./: README.md  crisis-analysis.ipynb  doc_class_text_mining.md  index.html  main.py  pyproject.toml
Cache/: process.txt  pyproject.toml
Notebook/: 1_EDA copy.ipynb  1_EDA.ipynb  2_cleaner.ipynb  3_EDA.ipynb  4_Modelisation.ipynb  4_ml.IPYNB  df.pkl  df_balanced.csv  df_balanced.pkl  df_clean_v1.csv  gridsearch_results.csv  test_to_suli.csv  text_mining.py  text_minning.py  train_tweets_processed.csv
data/: clean_train_tweets.csv  df_clean_v1.csv  df_fe_suli.csv  go_ml.csv  lemmatizer_bow.csv  lemmatizer_features.csv  lemmatizer_tfidf.csv  stemmer_bow.csv  stemmer_tfidf.csv  test_code_modeling.csv  train_tweets_processed.csv  tweets_clean.csv
decision_tree/: decision_tree.ipynb  decision_tree.md  decision_tree.py  random_tree.ipynb
models/: first_svm.pkl  random_forest.pkl
notebook/: csv_maker.ipynb  eda.ipynb  make_function.ipynb  modelisation.ipynb  text_mining.py  tweet_classifier.py  utils.py
poo/: test_poo.ipynb  text_mining.py
technologie_watch/: npl.md
veille/: veille.md
