[project]
name = "eye-of-emergency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "icecream>=2.1.5",
    "ipykernel>=6.29.5",
    "kagglehub>=0.3.12",
    "matplotlib>=3.9.4",
    "numpy>=1.21",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "pandas>=1.5.3,<2.0",
    "dataprep>=0.4.5",
    "plotly>=6.2.0",
    "mlxtend>=0.23.4",
    "scipy>=1.13.1",
    "spacy>=3.8.7",
    "nltk>=3.9.1",
]
